[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "goph420_lab01"
version = "0.0.1"
authors = [
{ name="Ethan Grozell", email="ethan.grozell@ucalgary.ca" },
]
description="numerical integration implementation for seismic to deterimine average squared velocity for and event and the probability of such event occuring"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/egrozell/goph-419-lab02-stEG"
